--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "camelot-py>=1.0.9",
     "clerk-backend-api>=3.3.1",
     "fastapi>=0.119.1",
     "fastapi-swagger-dark>=0.0.7",
